[package]
name = "frostbuild-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scheduler and CAS benchmark support for FrostBuild"

[lib]
name = "frostbuild_bench"
path = "src/lib.rs"

[[bin]]
name = "frost-bench-rs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
frostbuild-core.workspace = true
frostbuild-daemon.workspace = true
frostbuild-exec.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
frostbuild-core.workspace = true
