[package]
name = "frostbuild-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "frost"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
frostbuild-core.workspace = true
frostbuild-exec.workspace = true
