[package]
name = "frostbuild-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FrostBuild command-line interface"

[[bin]]
name = "frost"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
crossterm.workspace = true
frostbuild-core.workspace = true
frostbuild-exec.workspace = true
frostbuild-bench.workspace = true
frostbuild-daemon.workspace = true
glob.workspace = true
notify.workspace = true
libc.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zip.workspace = true
