[package]
name = "frostbuild-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core graph, manifest, hashing, journal, and CAS types for FrostBuild"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
zstd.workspace = true
glob.workspace = true
memmap2.workspace = true
postcard.workspace = true
rayon.workspace = true
ignore.workspace = true

[dev-dependencies]
proptest.workspace = true
