[package]
name = "frostbuild-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Workspace daemon and filesystem watcher for FrostBuild"

[lib]
path = "src/lib.rs"

[[bin]]
name = "frostd"
path = "src/main.rs"

[dependencies]
blake3.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
notify.workspace = true
frostbuild-exec.workspace = true
