[package]
name = "frostbuild-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parallel incremental executor and scheduler for FrostBuild"

[dependencies]
postcard.workspace = true
serde.workspace = true
anyhow.workspace = true
blake3.workspace = true
frostbuild-core.workspace = true
ctrlc.workspace = true
libc.workspace = true
rayon.workspace = true
